examples/syntaxErrors/typeNotDefinedInTypeDefinitionError.lcp
B = C
A = ()
main : A -> A -> A
main x y = ()
